# Das-blaue-Auto

./: .gitignore
description/: owndesc.description
src/aadcBase/: CMakeLists.txt
src/aadcControllerTuning/: AdvancedZieglerNichols.m  README.txt
src/aadcControllerTuning/example/: StepResponse.csv  StepResponseCut.csv
src/aadcDemo/datafilter/: CMakeLists.txt
src/aadcTesting/: README.txt  Testenvironment_MatlabSimulink.mlappinstall
src/aadcTesting/Code/: Testumgebung_MatlabSimulink.mlapp  configureSimulinkModel.m  cpp2mat.m  import_csv_file.m
src/aadcUser/: CMakeLists.txt  owndesc.description
src/aadcUser/Add/: Add.cpp  Add.h  CMakeLists.txt
src/aadcUser/ArduinoSignalConverter/: ArduinoSignalConverter.cpp  ArduinoSignalConverter.h  CMakeLists.txt
src/aadcUser/BirdView/: BirdView.cpp  BirdView.h  CMakeLists.txt
src/aadcUser/ImageProcessing/: CMakeLists.txt  ImageProcessing.cpp  ImageProcessing.h
src/aadcUser/LIDARProcessing/: LIDARProcessing.cpp  LIDARProcessing.h  neuer_Filter.cpp
src/aadcUser/Mapping_Long/: CMakeLists.txt  Mapping_Long.cpp  Mapping_Long.h
src/aadcUser/MovingAvgFilter/: CMakeLists.txt  MovingAvgFilter.cpp  MovingAvgFilter.h
src/aadcUser/ObjectDetectionYolo/: CMakeLists.txt  ObjectDetect.cpp  ObjectDetect.h  ObjectLocalizer.cpp  ObjectLocalizer.h  pluginDef.cpp
src/aadcUser/ObjectLocalizationCamera/: CMakeLists.txt  ObjectLocalizer.cpp  ObjectLocalizer.h
src/aadcUser/PID_Controller/: CMakeLists.txt  PID_Controller.cpp  PID_Controller.h
src/aadcUser/Precontrol/: CMakeLists.txt  Precontrol.cpp  Precontrol.h
src/aadcUser/PredictQF/: PredictQF.h  (+2 more)
(+28 files in other folders)
